[project]
name = "ftd2xx-aio"
description = "Transport/protocol layer to extend ftd2xx for asyncronous connections."
authors = [
    {name = "Krister Wikstrom"},
]
dependencies = [
    "ftd2xx>=1.3.3",
]
requires-python = ">=3.9"
license = {text = "MIT"}

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/ftd2xx/ftd2xx-aio"

[tool]
[tool.pdm]
version = { source = "file", path = "ftd2xx_aio/__init__.py" }

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
